<resources>
    <string name="app_name">Home IoT</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_category_key_system">pref_system</string>
    <string name="pref_category_title_system">System</string>
    <string name="pref_category_key_about">pref_about</string>
    <string name="pref_category_title_about">About</string>
    <string name="pref_build_number">Build Number</string>
    <string name="pref_key_system_settings">pref_system_settings</string>
    <string name="pref_title_system_settings">System Settings</string>
    <string name="pref_key_server_ip_address">pref_server_ip</string>
    <string name="pref_title_server_ip_address">Server IP Address</string>
    <string name="pref_title_server_query_timeout">Server Request Timeout</string>
    <string name="pref_key_server_ip_static">pref_server_ip_static</string>
    <string name="pref_title_server_ip_static">Static Server IP</string>
    <string name="pref_key_server_query_interval">pref_server_query_interval</string>
    <string name="pref_category_key_danger_zone">pref_danger_zone</string>
    <string name="pref_category_title_danger_zone">Danger Zone</string>
    <string name="pref_key_reset">pref_reset</string>
    <string name="pref_title_reset">Reset</string>
    <string-array name="appliance_signals">
        <item>Digital</item>
        <item>Analog</item>
    </string-array>
</resources>